Bug 494807 - Do not expose a11y info specific to hyperlinks when role is overridden using ARIA. r=surkov